--- a/MovieHouse_Welcome_Page.css
+++ b/MovieHouse_Welcome_Page.css
@@ -1,9 +1,18 @@
+
+@font-face{
+    font-family: myFont;
+    src: url('Poppins/Poppins-Regular.ttf');
+}
+
 *{
     margin: 0;
     padding: 0;
 }
 em{
     color: yellow;
+}
+body{
+    font-family:myFont;
 }
 
 .display-none{
