--- a/css/MovieHouse_Download_Page.css
+++ b/css/MovieHouse_Download_Page.css
@@ -1,3 +1,9 @@
+@font-face{
+    font-family: myFont;
+    src: url('../fonts/Poppins/Poppins-Regular.ttf');
+}
+
+
 
 *{
     margin: 0;
@@ -12,6 +18,9 @@
 }
 button{
     cursor: pointer;
+}
+body{
+    font-family:myFont ;
 }
 
 @media all and (max-width:397px)
