--- a/css/MovieHouse_Welcome_Page.css
+++ b/css/MovieHouse_Welcome_Page.css
@@ -1,7 +1,7 @@
 
 @font-face{
     font-family: myFont;
-    src: url('Poppins/Poppins-Regular.ttf');
+    src: url('../fonts/Poppins/Poppins-Regular.ttf');
 }
 
 *{
